src/objects/Grant_Scheme__c.object
<CustomObject>
    <fields>
        <fullName>Advice_from_NGAP__c</fullName>
        <label>Advice from NGAP</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allocation_Method_Competed__c</fullName>
        <formula>IF(INCLUDES(Allocation_Method__c, &quot;Competed&quot;), Scheme_Value__c/( 

IF(INCLUDES( Allocation_Method__c ,&quot;Un-competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Formula&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c,&quot;Criteria Based&quot;),1,0) 

) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch allocation method competed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Method_Criteria__c</fullName>
        <formula>IF(INCLUDES(Allocation_Method__c, &quot;Criteria Based&quot;), Scheme_Value__c/( 

IF(INCLUDES( Allocation_Method__c ,&quot;Un-competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Formula&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c,&quot;Criteria Based&quot;),1,0) 

) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch allocation method criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Method_Formula__c</fullName>
        <formula>IF(INCLUDES(Allocation_Method__c, &quot;Formula&quot;), Scheme_Value__c/( 

IF(INCLUDES( Allocation_Method__c ,&quot;Un-competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Formula&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c,&quot;Criteria Based&quot;),1,0) 

) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch allocation method formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Method_Grant_in_Aid__c</fullName>
        <formula>IF(INCLUDES(Allocation_Method__c, &quot;Grant in Aid&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Allocation_Method__c ,&quot;General Grants - Un-competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;General Grants - Competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Formula&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c,&quot;General Grants - Criteria Based&quot;),1,0)+ 
IF(INCLUDES( Allocation_Method__c,&quot;Grant in Aid&quot;),1,0) 



) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch allocation method grant in aid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Method_UnCompeted__c</fullName>
        <formula>IF(INCLUDES(Allocation_Method__c, &quot;Un-competed&quot;), Scheme_Value__c/( 

IF(INCLUDES( Allocation_Method__c ,&quot;Un-competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Competed&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c ,&quot;Formula&quot;),1,0) + 
IF(INCLUDES( Allocation_Method__c,&quot;Criteria Based&quot;),1,0) 

) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch allocation method un-competed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Method__c</fullName>
        <description>Competed	- e.g. application based
Un-competed 	- e.g. where a charity writes to a Minister about an initiative they have and this aligns with the departmental objectives, so they get given a grant to make that initiative real
Formula 	- where the means by which the money is allocated is calculated through a formula
Criteria Based 	- where there is qualifying criteria in order to receive money, but as long as they qualify, the recipient gets the money, as there is no competition e.g. floods</description>
        <inlineHelpText>The method by which the grant was allocated. This can be either competed, formula, un-competed or criteria based. Definitions of each are given in the Data and System Glossary of Terms, found on the Home page.</inlineHelpText>
        <label>Scheme allocation method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Grants - Competed</fullName>
                </value>
                <value>
                    <fullName>General Grants - Un-competed</fullName>
                </value>
                <value>
                    <fullName>General Grants - Criteria Based</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Formula - Criteria Based</fullName>
                </value>
                <value>
                    <fullName>Grant in Aid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_And_Assessment__c</fullName>
        <label>Application and Assessment (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authority_Act__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Authority Act is the legal power that allows a department to give a grant. This can be found in the business case form that departments complete when they are considering a grant. If you cannot find your Act, please get in touch with us.</inlineHelpText>
        <label>Authority Act</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Authority_Act__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Authority_Act__c</referenceTo>
        <relationshipLabel>Grant Schemes</relationshipLabel>
        <relationshipName>Grant_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_And_Agree_Terms_Of_Grant_Payment__c</fullName>
        <label>Award &amp; Agree Terms of Grant Payment (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COFOG_L2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the related COFOG L2 Code for this Scheme.</description>
        <inlineHelpText>Classification of the Functions of Government - values, levels 1 and 2, are taken from the United Nations Statistics Division classification published at unstats.un.org</inlineHelpText>
        <label>COFOG L2</label>
        <referenceTo>COFOG_L2__c</referenceTo>
        <relationshipLabel>Grant Schemes</relationshipLabel>
        <relationshipName>Grant_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COFOG_Level_1_Name__c</fullName>
        <description>This is COFOG Level 1 Long name</description>
        <formula>COFOG_L2__r.COFOG_L1_Long_Name__c</formula>
        <label>COFOG Level 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COFOG_Level_2_Name__c</fullName>
        <description>This is COFOG Level 2 Long name</description>
        <formula>COFOG_L2__r.COFOG_L2_Long_Name__c</formula>
        <label>COFOG Level 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Resource__c</fullName>
        <description>This field indicates if the scheme needs to be used as Capital, Resource or mixed</description>
        <inlineHelpText>As schemes could have both capital and resource funding within them, the user can select one of the 3 options: Capital; Resource; Mixed. Definitions of each are given in the Data and System Glossary of Terms, found on the Home page.</inlineHelpText>
        <label>Capital/ Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considered_by_the_Grants_Advice_Panel__c</fullName>
        <inlineHelpText>The New Grants Advice Panel meets regularly to provide advice and challenge to departments on any grant schemes being planned across government and to improve the strategic coordination of government grants.</inlineHelpText>
        <label>Considered by the Grants Advice Panel?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_email_address__c</fullName>
        <description>This is the email of the System administrator.</description>
        <inlineHelpText>This is the person in a department/ ALB in charge of administering the grant within government that will know more about the grant and can be contacted for further details, either by other departments or internally.</inlineHelpText>
        <label>Internal Grant Administrator email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Department_referring_to_NGAP__c</fullName>
        <label>Department referring to NGAP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_And_Development_Admin_Cost__c</fullName>
        <label>Design and Development (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_Numeric__c</fullName>
        <description>JM 13/02/2107 - Formula that converts the Duration in years picklist to a numeric field</description>
        <formula>VALUE(TEXT( Duration__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>The Scheme&apos;s duration</description>
        <inlineHelpText>How long the scheme will run for. The duration is from the scheme opening to the last grants ending.</inlineHelpText>
        <label>Duration (years)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_number__c</fullName>
        <formula>CASE(Duration__c, &quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;, 3,&quot;4&quot;, 4,&quot;5&quot;, 5,&quot;6&quot;, 6,&quot;7&quot;, 7,&quot;8&quot;, 8, &quot;9&quot;, 9,&quot;10&quot;, 10,&quot;11&quot;, 11,&quot;12&quot;, 12,&quot;13&quot;, 13,&quot;14&quot;, 14,&quot;15&quot;, 15,&quot;16&quot;, 16,&quot;17&quot;, 17,&quot;18&quot;, 18,&quot;19&quot;, 19,&quot;20&quot;, 20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Fund_name__c</fullName>
        <description>If the public funding source is EU funding then a value should be selected for this picklist</description>
        <inlineHelpText>The specific EU Fund that the funding comes from. Please choose one of the options in the list or get in touch with us if yours is missing, we can add it to the system.</inlineHelpText>
        <label>EU Fund name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Public_funding_source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asylum Migration and Integration Fund (AMIF)</fullName>
                </value>
                <value>
                    <fullName>Cohesion Fund (CF)</fullName>
                </value>
                <value>
                    <fullName>EU Agricultural Fund - Rural Development</fullName>
                </value>
                <value>
                    <fullName>EU Agricultural Guarantee Fund</fullName>
                </value>
                <value>
                    <fullName>EU Creative Europe Fund</fullName>
                </value>
                <value>
                    <fullName>EU Life Programme</fullName>
                </value>
                <value>
                    <fullName>EU Maritime &amp; Fisheries Fund</fullName>
                </value>
                <value>
                    <fullName>EU Regional Development Fund (ERDF)</fullName>
                </value>
                <value>
                    <fullName>EU Social Fund (ESF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>DATE(YEAR(Start_Date__c) + VALUE(TEXT(Duration__c)),MONTH(Start_Date__c),DAY(Start_Date__c))-1</formula>
        <inlineHelpText>This field is auto-calculated based on the start date and the duration. Needed when running reports.</inlineHelpText>
        <label>Scheme end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Modified_Date_by_Portal_User__c</fullName>
        <label>Evaluation Modified Date by Portal User</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <label>Evaluation (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Year_Multi__c</fullName>
        <label>Scheme financial year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the funder organisation lookup</description>
        <inlineHelpText>The entity that is funding the grant scheme (this is in most cases, a government department where the funds start)</inlineHelpText>
        <label>Funder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Funder__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grant Schemes (Funder)</relationshipLabel>
        <relationshipName>Grant_Schemes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_Do_not_publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GS_Explanation_for_not_publishing__c</fullName>
        <label>Explanation for not publishing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Reason_for_not_publishing__c</fullName>
        <label>Reason for not publishing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National security</fullName>
                </value>
                <value>
                    <fullName>Sensitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Scheme_Name_Link__c</fullName>
        <formula>HYPERLINK(
 IF(
  ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;), 
  &apos;/datasolution/&apos;, &apos;/&apos;
  ) &amp;  Id, 
  Scheme_Name__c , &apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Scheme Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme_Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you want to withdraw your Proposed Grant Scheme, please tick this box</inlineHelpText>
        <label>Grant Scheme Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_No_Reasons__c</fullName>
        <inlineHelpText>If you have chosen No in the above field, then you need to provide an explanation why the Scheme Evaluation hasn&apos;t been done (choose from a picklist of pre-populated reasons)</inlineHelpText>
        <label>If &apos;No&apos;, Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scheme_Evalution_Completed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation not applicable</fullName>
                </value>
                <value>
                    <fullName>Disproportionate cost of evaluation</fullName>
                </value>
                <value>
                    <fullName>Low risk</fullName>
                </value>
                <value>
                    <fullName>Grant not ended yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the Grant Scheme has been intermediated through intermediary organisations. This is used when the use know that the Grant Scheme has been intermediated but doesn&apos;t have enough information about the intermediary organisation to create the connection.</description>
        <inlineHelpText>This field is asking if the grant scheme will be run with the help of an intermediary or not. Even if you don&apos;t know who the intermediary will be, you can add it to the scheme later, but you should know if it&apos;s going to be intermediated or not.</inlineHelpText>
        <label>Intermediated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Department_Data__c</fullName>
        <description>The user needs to have a default list view filtered for their own department, but they can change this</description>
        <formula>LEFT(
 Owner:User.UserRole.Name , 
 IF(
  RIGHT(Owner:User.UserRole.Name, 8) == &apos; Manager&apos;
  , LEN(Owner:User.UserRole.Name) - 8
  , LEN(Owner:User.UserRole.Name) - 5
 )
)== LEFT(
 $UserRole.Name, 
 IF(
  RIGHT($UserRole.Name, 8) == &apos; Manager&apos;
  , LEN($UserRole.Name) - 8
  , LEN($UserRole.Name) - 5
 )
)</formula>
        <label>Is My Department Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_and_questions_for_NGAP__c</fullName>
        <label>Issues and questions for NGAP</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Engagement_And_Application__c</fullName>
        <label>Market Engagement and Application (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Grant_Award_End_Date__c</fullName>
        <label>Max Grant Award End Date</label>
        <summarizedField>Grant_Award__c.Award_End_Date__c</summarizedField>
        <summaryForeignKey>Grant_Award__c.Grant_Scheme__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monitoring_And_Performance_Management__c</fullName>
        <label>Monitoring &amp; Performance Management (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Activity_1_Cost__c</fullName>
        <label>Other Activity 1 Cost (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Activity_1__c</fullName>
        <label>Other Activity 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Activity_2_Cost__c</fullName>
        <label>Other Activity 2 Cost (£)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Activity_2__c</fullName>
        <label>Other Activity 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Authority_Act__c</fullName>
        <inlineHelpText>If there are secondary related Authority Acts, or needed Authority Act does not show up in our list above, then this freetext field can be used.</inlineHelpText>
        <label>Other Authority Act</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_public_funding_source__c</fullName>
        <inlineHelpText>If &quot;Other&quot; is selected in the &quot;Public funding source&quot; above, then you have to include more information about your public funding source here.</inlineHelpText>
        <label>Other public funding source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Grant_Name__c</fullName>
        <description>JM 13/02/2107 - Parent Grant Scheme Name</description>
        <formula>Parent_Grant_Scheme__r.Scheme_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an automatically populated field which shows which parent a scheme is linked to.</inlineHelpText>
        <label>Parent Grant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Grant_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JM 13/02/2107 - Link to a Grant Schemes parent scheme record to support.</description>
        <inlineHelpText>If a scheme is defined as a child then it needs to be linked to parent. Use this search box to search for the correct scheme to link to.</inlineHelpText>
        <label>Parent Grant Scheme</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Grant_Scheme__c.Programme__c</field>
                <operation>equals</operation>
                <valueField>$Source.Programme__c</valueField>
            </filterItems>
            <filterItems>
                <field>Grant_Scheme__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Grant_Scheme__c.Parent_Grant_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Grant_Scheme__c</referenceTo>
        <relationshipLabel>Grant Schemes</relationshipLabel>
        <relationshipName>Grant_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_User_Cannot_Delete_This_Record__c</fullName>
        <formula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
, NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c) 
, OR($Profile.Name = &apos;Data Solution Portal - Centre User&apos;, $Profile.Name = &apos;Data Solution Portal - User&apos;)
)</formula>
        <label>Portal User Cannot Delete This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Purpose__c</fullName>
        <description>details can be found on : https://docs.google.com/spreadsheets/d/1Hb7iIacx-Koy2lIrXoqSyzdTf0bh-1TRvCyR8Jwtif8/edit#gid=488764022</description>
        <inlineHelpText>The purpose that the grant is being paid out for. 5 mutually exclusive purposes have been identified. Definitions of each are given in the Data and System Glossary of Terms, found on the Home page. If no option suits, choose None of the above.</inlineHelpText>
        <label>Primary Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supporting delivery of a public service</fullName>
                </value>
                <value>
                    <fullName>Supporting delivery of a public policy</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Financial Assistance / Support</fullName>
                </value>
                <value>
                    <fullName>Subscriptions and pension payments</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme_Reference_Number__c</fullName>
        <formula>Programme__r.Programme_Reference_Number__c</formula>
        <inlineHelpText>This is a reference number that can be given from a department&apos;s own internal system, when creating the Programme, but it is optional. If this is blank, then it means you haven&apos;t provided one when you created the Programme.</inlineHelpText>
        <label>Programme Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent Grant Programe</description>
        <inlineHelpText>In order to be able to choose a Programme (Name) when you create a Scheme, you need to have created the Programme first, from the Programme tab.</inlineHelpText>
        <label>Programme</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Grant Schemes</relationshipLabel>
        <relationshipName>Grant_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_funding_source__c</fullName>
        <description>the source of public funding</description>
        <inlineHelpText>The source of funding for the grant scheme. This could be from the UK Exchequer,  EU Funding, both, Lottery Funding, NATO or other type.</inlineHelpText>
        <label>Public funding source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UK Exchequer</fullName>
                </value>
                <value>
                    <fullName>EU Funding</fullName>
                </value>
                <value>
                    <fullName>UK + EU funding</fullName>
                </value>
                <value>
                    <fullName>Lottery funding</fullName>
                </value>
                <value>
                    <fullName>NATO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_explanation__c</fullName>
        <description>This is the purpose explanation for this Scheme</description>
        <inlineHelpText>If None of the Above is selected as an option in Primary purpose, then this is a freetext field to be populated and cannot be left blank. If a particular grant doesn&apos;t fit into any of the categories, an explanation should be provided.</inlineHelpText>
        <label>Purpose explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Given_Answer__c</fullName>
        <inlineHelpText>Freetext field to explain reasons for scheme achieving/not achieving objectives.</inlineHelpText>
        <label>State the reason for your answer above</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Central_Government__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Central Government&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 



) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Central Government</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Civil_Society__c</fullName>
        <description>checks if Recipient Sector field contains the Civil Society words, then it returns the value of the scheme

IF(INCLUDES(Recipient_Sector__c, &quot;Civil Society&quot;), Scheme_Value__c/ (LEN(Recipient_Sector__c)-LEN(SUBSTITUTE(Recipient_Sector__c,&quot;;&quot;,&quot;&quot;)+1)) ,0)


Central Government
Local Government
Civil Society
Public Organisations
Non-Departmental Public Bodies
Private
Individuals
International</description>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Civil Society&quot;), Scheme_Value_per_year__c/(

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 



) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Civil Society</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rec_sector_Individuals__c</fullName>
        <formula>IF(INCLUDES(Recipient_Sector__c, &quot;Individuals&quot;), Scheme_Value_per_year__c/( 

IF(INCLUDES( Recipient_Sector__c ,&quot;Central Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Civil Society&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Local Government&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Public Organisations&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Non-Departmental Public Bodies&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Private&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;Individuals&quot;),1,0) + 
IF(INCLUDES( Recipient_Sector__c ,&quot;International&quot;),1,0) 


) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec sector Individuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>